# export-volumes-ukb

./: .gitignore  Dockerfile  README.md  docker-compose.base.yml  docker-compose.dev.yml  docker-compose.prod.yml  example.env  pyproject.toml  sandbox.ipynb  tasks.py
.devcontainer/: devcontainer.json
dagster_home_prod/: dagster.yaml
export_volumes_pipeline/: __init__.py  assets.py  constants.py  errors.py  io_managers.py  models.py  pacs_client.py  partitions.py  resources.py  utils.py
export_volumes_pipeline/notebooks/: sandbox.ipynb
nginx/: setup_production.sh
scripts/: clean_datagster_home.py  compose_down.py  compose_up.py
