[tool.poetry]
name = "export-volumes-pipeline"
version = "0.1.0"
description = ""
authors = ["medihack <kai.schlamp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
adit-client = "^0.5.2"
dagster = "^1.9.2"
dagster-webserver = "^1.9.2"
shortuuid = "^1.0.13"

[tool.poetry.group.dev.dependencies]
adit-radis-shared = { git = "https://github.com/openradx/adit-radis-shared.git", tag = "0.9.5" }
invoke = "^2.2.0"
pyright = "^1.1.385"
ruff = "^0.7.0"

[tool.pyright]
ignore = ["**/*.ipynb"]
typeCheckingMode = "basic"
reportUnnecessaryTypeIgnoreComment = true

[tool.ruff]
line-length = 100
lint.select = ["E", "F", "I", "DJ"]

[tool.dagster]
module_name = "export_volumes_pipeline"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
