[tool.poetry]
name = "export-volumes-pipeline"
version = "0.1.0"
description = ""
authors = ["medihack <kai.schlamp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
dagster = "^1.9.2"
dagster-webserver = "^1.9.2"
dicognito = "0.17.0"
pydicom = "2.4.4"
pynetdicom = "^2.1.1"
python = ">=3.12,<3.13"
shortuuid = "^1.0.13"
stamina = "^24.3.0"

[tool.poetry.group.dev.dependencies]
environs = "^14.1.0"
invoke = "^2.2.0"
ipykernel = "^6.29.5"
pyright = "^1.1.385"
ruff = "^0.7.0"

[tool.pyright]
ignore = ["**/*.ipynb"]
typeCheckingMode = "basic"
reportUnnecessaryTypeIgnoreComment = true

[tool.ruff]
line-length = 100
lint.select = ["E", "F", "I", "DJ"]

[tool.dagster]
module_name = "export_volumes_pipeline"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
